# nurbspy

./: .buildinfo  .bumpversion.cfg  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.github/workflows/: deploy_docs.yaml  publish_to_pipy.yml
_modules/: index.html  nurbspy.html
_modules/nurbspy/: graphics.html  nurbs_basis_functions.html  nurbs_curve.html  nurbs_curve_circular_arc.html  nurbs_surface.html  nurbs_surface_bilinear.html  nurbs_surface_coons.html  nurbs_surface_extruded.html  nurbs_surface_revolution.html  nurbs_surface_ruled.html
_static/: documentation_options.js
demos/blade_parametrization/: endpoint_curvature_v1.py  endpoint_curvature_v2.py  endpoint_curvature_v3.py
demos/demos_basis_polynomials/: demo_basis_polynomials.py
demos/demos_curves/: demo_bezier_curve.py  demo_bezier_curve_rational.py  demo_bspline_curve.py  demo_nurbs_curve.py  demo_nurbs_curve_circular_arc.py  demo_nurbs_curve_derivative.py  demo_nurbs_curve_merge.py  demo_nurbs_curve_point_projection.py
demos/jax_dev/: demo_basis_polynomials_timing.py  demo_full_differentiation.py  demo_nurbs_curve_point_projection.py  demo_nurbs_endpoint_derivative.py  verify_analytic_derivatives.py
docs/: build_bibliography.py  build_docs.py  conf.py  index.rst
docs/source/api/: nurbspy.rst  (+7 more)
nurbspy/: __init__.py  nurbs_curve.py  nurbs_curve_circular_arc.py  nurbs_surface.py  nurbs_surface_revolution.py
nurbspy/jax/: __init__.py  constrainted_maximum.py  nurbs_basis_functions.py  nurbs_curve.py  nurbs_curve_circular_arc.py
source/api/: nurbspy.graphics.html  nurbspy.html  nurbspy.jax.html  nurbspy.jax.nurbs_basis_functions.html  nurbspy.jax.nurbs_curve.html  nurbspy.jax.nurbs_curve_circular_arc.html  nurbspy.nurbs_basis_functions.html  nurbspy.nurbs_curve.html  nurbspy.nurbs_curve_circular_arc.html  nurbspy.nurbs_surface.html  nurbspy.nurbs_surface_bilinear.html  nurbspy.nurbs_surface_coons.html  nurbspy.nurbs_surface_extruded.html  nurbspy.nurbs_surface_revolution.html  (+1 more)
tests/: run_tests.py  test_nurbs_basis_functions.py  test_nurbs_curve.py
(+25 files in other folders)
