[tool.poetry]
name = "nurbspy"
version = "1.1.3"
description = "A lightweight library for NURBS curves and surfaces"
authors = ["Roberto Agromayor <rober.agro@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/turbo-sim/nurbspy"
documentation = "https://github.com/turbo-sim/nurbspy"


[tool.poetry.dependencies]
python = ">=3.11,<3.14"
numpy = "^2.2.4"
scipy = "^1.15.2"
matplotlib = "^3.10.1"
PyYAML = "^6.0.2"
toml = "^0.10.2"
cycler = "^0.12.1"
numba = "^0.61.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"
ipython = "^8.23.0"
bump2version = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


# Rememeber to add --tags when publishing a new version
# git push origin main --tags